// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 0.interactive 1`] = `
<label
  className="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={true}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Vanilla
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Vanilla
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 0.interactive 2`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Chocolate
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Chocolate
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 0.interactive 3`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Strawberry
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Strawberry
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 0.interactive 4`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Salted caramel
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Salted caramel
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 0.interactive 5`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Mint choc chip (the best)
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Mint choc chip (the best)
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 1.states 1`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      (default props)
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    (default props)
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 1.states 2`] = `
<label
  className="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <RadioButton
    isDisabled={true}
    isSelected={false}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Disabled
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Disabled
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 1.states 3`] = `
<label
  className="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={true}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Selected
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Selected
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 1.states 4`] = `
<label
  className="lucid-RadioButtonLabeled lucid-RadioButtonLabeled-is-disabled lucid-RadioButtonLabeled-is-selected"
  style={
    Object {
      "marginBottom": "3px",
      "marginRight": "13px",
    }
  }
>
  <RadioButton
    isDisabled={true}
    isSelected={true}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Disabled & selected
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Disabled & selected
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 2.label-as-child 1`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      Just text
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Just text
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 2.label-as-child 2`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  >
    <RadioButtonLabeled.Label>
      <span>
        HTML element
      </span>
    </RadioButtonLabeled.Label>
  </RadioButton>
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    <span>
      HTML element
    </span>
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 3.label-as-prop 1`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Just text
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 3.label-as-prop 2`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    <span>
      HTML element
    </span>
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 3.label-as-prop 3`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    Text in an array
  </div>
</label>
`;

exports[`RadioButtonLabeled [common] example testing should match snapshot(s) for 3.label-as-prop 4`] = `
<label
  className="lucid-RadioButtonLabeled"
  style={
    Object {
      "marginBottom": "3px",
    }
  }
>
  <RadioButton
    isDisabled={false}
    isSelected={false}
    onSelect={[Function]}
  />
  <div
    className="lucid-RadioButtonLabeled-label"
  >
    <span
      key="1"
    >
      HTML element in an array
    </span>
  </div>
</label>
`;
